--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,12 @@ authors = ["paul@colomiets.name"]
 edition = "2018"
 
 [dependencies]
-libc = "0.2.93"
-nix = "0.20.0"
+libc = "0.2.170"
+nix = { version = "0.21.2" }
 
 [dev-dependencies]
 argparse = "0.2.2"
-rand = "0.8.3"
+rand = "0.9.0"
 
 [lib]
 name = "unshare"
